--- a/client/index.html
+++ b/client/index.html
@@ -21,10 +21,21 @@
     <!-- <img crossorigin="anonymous" src="./data.jpg" width="256" height="16"> -->
 
     <script>
-        let image = new POINTS.ARENA3DImage('./data/image.jpg');
+        let mqttStream = new POINTS.MQTTStreamedVideoSource(
+            window.location.hostname, 9001,
+            function(msg) {
+                console.log(msg);
+            }
+        );
+        let stream = new POINTS.ARENA3DStream(mqttStream);
         let scene = new POINTS.Record3DScene(60, 1e-4, 1e5);
         scene.runloop();
-        scene.addImage(image);
+        scene.addImage(stream);
+
+        // let image = new POINTS.ARENA3DImage('../server/data/image0.jpg');
+        // let scene = new POINTS.Record3DScene(60, 1e-4, 1e5);
+        // scene.runloop();
+        // scene.addImage(image);
     </script>
 </body>
 </html>
