use arenaxr broker

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
 
     <script>
         let mqttStream = new POINTS.MQTTStreamedVideoSource(
-            "localhost", 9001,
+            "arenaxr.org/mqtt/",
             function(msg) {
                 console.log(msg);
             }
