--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,8 @@
 </head>
 
 <body class="d-flex h-100 text-center text-white bg-dark">
-    <video id="video" width="480" autoplay="true" type='application/x-mpegURL' style="display: none;"></video>
+    <video id="video" width="480" controls autoplay="1" crossorigin="anonymous" playsinline="1" type="application/x-mpegURL" style="display: none;"></video>
+    <video id="video2" width="480" controls autoplay="1" crossorigin="anonymous" playsinline="1" type="application/x-mpegURL" style="display: none;"></video>
 
     <div id="stats"></div>
 
