--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.7/dat.gui.min.js "></script>
+    <script src="dist/hls.js"></script>
+    <script src="dist/dat.gui.min.js"></script>
     <script src="dist/points.js"></script>
 </head>
 
