rm readme in server/

--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,7 @@
         playsinline="1"
         muted="muted"
         type="application/x-mpegURL"
-        style="display: block; position: fixed; z-index: 10000;">
+        style="display: none; position: fixed; z-index: 10000;">
     </video>
     <video
         id="video_d"
@@ -34,7 +34,7 @@
         playsinline="1"
         muted="muted"
         type="application/x-mpegURL"
-        style="display: block; position: fixed; left: 240px; z-index: 10000;">
+        style="display: none; position: fixed; left: 240px; z-index: 10000;">
     </video>
 
     <a-scene background="color: gray">
