--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
 
-    <script src="dist/hls.js"></script>
+    <script src="dist/dash.min.js"></script>
     <script src="dist/dat.gui.min.js"></script>
     <script src="dist/points.js"></script>
 </head>
