--- a/client/hls.html
+++ b/client/hls.html
@@ -3,23 +3,81 @@
 <head>
   <title>HLS Stream</title>
 </head>
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<script src="dist/hls.js"></script>
 <body>
-  <video id="video" width="720" controls autoplay="1" crossorigin="anonymous" playsinline="1" type="application/x-mpegURL"></video>
   <script>
-    const URL = "https://arena-dev1.conix.io/dev/lidar_rgb/hls/stream.m3u8";
-    var video = document.getElementById("video");
+    const URL_RGB = "https://arena-dev1.conix.io/dev/lidar_rgb/hls/stream_rgb.m3u8";
+    const URL_D = "https://arena-dev1.conix.io/dev/lidar_rgb/hls/stream_d.m3u8";
+    const URL_BUNNY = "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8";
+
+    var videoTagRGB = document.createElement("video");
+    videoTagRGB.setAttribute("width", "240px");
+    videoTagRGB.setAttribute("id", "video_rgb");
+    videoTagRGB.setAttribute("controls", "1");
+    videoTagRGB.setAttribute("autoplay", "1");
+    videoTagRGB.setAttribute("crossorigin", "anonymous");
+    videoTagRGB.setAttribute("playsinline", "1");
+    videoTagRGB.setAttribute("muted", "muted");
+    videoTagRGB.setAttribute("type", "application/x-mpegURL");
+    videoTagRGB.style.display = "block";
+    videoTagRGB.style.position = "fixed";
+    videoTagRGB.style.left = "0px";
+    videoTagRGB.style.zIndex = "10000";
+    document.body.appendChild(videoTagRGB);
+
+    var videoTagD = document.createElement("video");
+    videoTagD.setAttribute("width", "240px");
+    videoTagD.setAttribute("id", "video_d");
+    videoTagD.setAttribute("controls", "1");
+    videoTagD.setAttribute("autoplay", "1");
+    videoTagD.setAttribute("crossorigin", "anonymous");
+    videoTagD.setAttribute("playsinline", "1");
+    videoTagD.setAttribute("muted", "muted");
+    videoTagD.setAttribute("type", "application/x-mpegURL");
+    videoTagD.style.display = "block";
+    videoTagD.style.position = "fixed";
+    videoTagD.style.left = "240px";
+    videoTagD.style.zIndex = "10000";
+    document.body.appendChild(videoTagD);
+
+    var videoTagBunny = document.createElement("video");
+    videoTagBunny.setAttribute("width", "240px");
+    videoTagBunny.setAttribute("id", "video_bunny");
+    videoTagBunny.setAttribute("controls", "1");
+    videoTagBunny.setAttribute("autoplay", "1");
+    videoTagBunny.setAttribute("crossorigin", "anonymous");
+    videoTagBunny.setAttribute("playsinline", "1");
+    videoTagBunny.setAttribute("muted", "muted");
+    videoTagBunny.setAttribute("type", "application/x-mpegURL");
+    videoTagBunny.style.display = "block";
+    videoTagBunny.style.position = "fixed";
+    videoTagBunny.style.left = "480px";
+    videoTagBunny.style.zIndex = "10000";
+    document.body.appendChild(videoTagBunny);
+
     if (Hls.isSupported()) {
-      var hls = new Hls();
-      hls.loadSource(URL);
-      hls.attachMedia(video);
-      hls.on(Hls.Events.MANIFEST_PARSED, function() {
-      });
+        var hlsRGB = new Hls();
+        hlsRGB.loadSource(URL_RGB);
+        hlsRGB.attachMedia(videoTagRGB);
+        hlsRGB.on(Hls.Events.MANIFEST_PARSED, function() {
+        });
+
+        var hlsD = new Hls();
+        hlsD.loadSource(URL_D);
+        hlsD.attachMedia(videoTagD);
+        hlsD.on(Hls.Events.MANIFEST_PARSED, function() {
+        });
+
+        var hlsBunny = new Hls();
+        hlsBunny.loadSource(URL_BUNNY);
+        hlsBunny.attachMedia(videoTagBunny);
+        hlsBunny.on(Hls.Events.MANIFEST_PARSED, function() {
+        });
     }
-    else if (video.canPlayType("application/vnd.apple.mpegurl")) {
-      video.src = URL;
-      video.addEventListener("loadedmetadata", function() {
-      });
+    else if (videoTagRGB.canPlayType("application/vnd.apple.mpegurl")) {
+        videoTagRGB.src = URL_RGB;
+        videoTagD.src = URL_D;
+        videoTagBunny.src = URL_BUNNY;
     }
   </script>
 </body>
