--- a/client/hls.html
+++ b/client/hls.html
@@ -9,57 +9,66 @@
     const URL_RGBD = "https://arena-dev1.conix.io/dev/lidar_rgb/hls/stream_rgbd_1080p.m3u8";
     const URL_BUNNY = "https://test-streams.mux.dev/x36xhzz/x36xhzz.m3u8";
 
-    var videoTagRGBD = document.createElement("video");
-    videoTagRGBD.setAttribute("width", "480");
-    videoTagRGBD.setAttribute("id", "video_rgbd");
-    videoTagRGBD.setAttribute("controls", "1");
-    videoTagRGBD.setAttribute("autoplay", "1");
-    videoTagRGBD.setAttribute("crossorigin", "anonymous");
-    videoTagRGBD.setAttribute("playsinline", "1");
-    videoTagRGBD.setAttribute("muted", "muted");
-    videoTagRGBD.setAttribute("type", "application/x-mpegURL");
-    videoTagRGBD.style.display = "block";
-    videoTagRGBD.style.position = "fixed";
-    videoTagRGBD.style.left = "0px";
-    videoTagRGBD.style.zIndex = "10000";
+    function createVideo() {
+        var videoEl = document.createElement("video");
+        videoEl.setAttribute("controls", "");
+        videoEl.setAttribute("playsinline", "");
+        videoEl.setAttribute("webkit-playsinline", "");
+        videoEl.setAttribute("type", "application/x-mpegURL");
+        videoEl.id = "video-rgbd";
+        videoEl.autoplay = true;
+        videoEl.loop = true;
+        videoEl.muted = true;
+        videoEl.crossOrigin = "anonymous";
+        videoEl.addEventListener("error", function () {
+            console.warn("Unable to create video from stream!!!");
+        }, true);
+
+        videoEl.style.width = "100%"
+        videoEl.style.display = "block";
+        videoEl.style.position = "absolute";
+        videoEl.style.zIndex = "9999";
+
+        return videoEl;
+    }
+
+    var videoTagRGBD = createVideo();
     document.body.appendChild(videoTagRGBD);
 
-    var videoTagBunny = document.createElement("video");
-    videoTagBunny.setAttribute("width", "240px");
-    videoTagBunny.setAttribute("id", "video_bunny");
-    videoTagBunny.setAttribute("controls", "1");
-    videoTagBunny.setAttribute("autoplay", "1");
-    videoTagBunny.setAttribute("crossorigin", "anonymous");
-    videoTagBunny.setAttribute("playsinline", "1");
-    videoTagBunny.setAttribute("muted", "muted");
-    videoTagBunny.setAttribute("type", "application/x-mpegURL");
-    videoTagBunny.style.display = "block";
-    videoTagBunny.style.position = "fixed";
-    videoTagBunny.style.left = "480px";
-    videoTagBunny.style.zIndex = "10000";
+    var videoTagBunny = createVideo();
+    videoTagBunny.style.top = "640px";
     document.body.appendChild(videoTagBunny);
 
-    if (videoTagRGBD.canPlayType("application/vnd.apple.mpegurl")) {
-        videoTagRGBD.src = URL_RGBD;
-        videoTagBunny.src = URL_BUNNY;
-
-        videoTagRGBD.onloadedmetadata = function() {
-            videoTagRGBD.play();
-        }
-    }
-    else if (Hls.isSupported()) {
-        var hlsRGBD = new Hls();
-        hlsRGBD.loadSource(URL_RGBD);
-        hlsRGBD.attachMedia(videoTagRGBD);
-        hlsRGBD.on(Hls.Events.MANIFEST_PARSED, function() {
+    function setURL(videoEl, url) {
+        return new Promise((resolve) => {
+            if (Hls.isSupported()) {
+                var hls = new Hls();
+                hls.loadSource(url);
+                hls.attachMedia(videoEl);
+                hls.on(Hls.Events.MANIFEST_PARSED, function() {
+                    videoEl.onloadedmetadata = function() {
+                        resolve();
+                    }
+                });
+            }
+            else {
+                videoEl.src = url;
+                videoEl.onloadedmetadata = function() {
+                    resolve();
+                }
+            }
         });
-
-        var hlsBunny = new Hls();
-        hlsBunny.loadSource(URL_BUNNY);
-        hlsBunny.attachMedia(videoTagBunny);
-        hlsBunny.on(Hls.Events.MANIFEST_PARSED, function() {
-        });
     }
+
+    setURL(videoTagRGBD, URL_RGBD)
+    .then(() => {
+        videoTagRGBD.play();
+    });
+
+    setURL(videoTagBunny, URL_BUNNY)
+    .then(() => {
+        videoTagBunny.play();
+    });
   </script>
 </body>
 </html>
